# esp-flashless-ui

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  idf_component.yml  idf_ext.py
examples/: flashless.manifest.json
schema/: flashless.schema.json
scripts/: component_registry.sh
tests/: test_autogen.py  test_cli.py  test_idf_ext.py  test_logging.py  test_manifest.py  test_server.py
tools/flashless/: __init__.py  autogen.py  cli.py  command.py  errors.py  manifest.py  project_idf_ext.py  report.py  server.py
